<resources>
    <string name="app_name">StateOfHealthTracker</string>
    <string name="nameMainFolder">Recording</string>
    <string name="baseNameForRecordFile">record</string>
    <string name="btn_dyskinesia">Дискинезия</string>
    <string name="btn_medication">Приём лекарств</string>
    <string name="imageButton_excellent">Чувствую себя отлично!</string>
    <string name="imageButton_satisfactorily">Чувствую себя удовлетворительно.</string>
    <string name="imageButton_bad">Чувствую себя плохо.</string>
    <string name="btn_ok">Принять</string>
    <string name="btn_cancel">Отменить</string>
    <string name="btn_next">Далее</string>
    <string name="text_how_do_you_feel">Как вы себя чувствуете?</string>
    <string name="hint_time">Время</string>
    <string name="hint_date">Дата</string>
    <string name="toast_save_data">Ваши данные сохранены!</string>
    <string name="dialog_text_confirmation_save_result">Спасибо!\nВаш результат записан\nв дневник</string>
    <string name="dialog_text_confirmation_save_data">Спасибо!\nВаши данные сохранены</string>
    <string name="dialog_text_tapping_result" formatted="true">Спасибо!\nВы нажали:\nЛевой рукой: %1$d\nПравой рукой: %2$d\nДанные сохранены</string>
    <string name="dialog_text_tapping_change">Теперь нажимайте правой рукой</string>
    <string name="dialog_text_common_result" formatted="true">Спасибо!\nДанные сохранены</string>
    <string name="dialogText_confirmation">Вы действительно хотите удалить уведомление?</string>
    <string name="dialogText_voice_permission">Чтобы пройти тест, разрешите доступ к микрофону</string>
    <string name="dialogText_voice_permission_go_setting">Чтобы пройти тест, необходим доступ к микрофону!\nОткрыть настройки?</string>
    <string name="dialogText_voice_background">Разрешите записать ваш голос!</string>
    <string name="dialogHeadline_choseDateAndTime">Укажите дату и время</string>
    <string name="dialogHeadline_thanks">Благодарность</string>
    <string name="dialogHeadline_category">Категория</string>
    <string name="dialogHeadline_choseTime">Укажите время</string>
    <string name="dialogHeadline_choseDate">Укажите дату</string>
    <string name="button_personal_date">Личные данные</string>
    <string name="button_notification">Уведомления</string>
    <string name="button_send_data">Отправка данных</string>
    <string name="textPersonName">Имя…</string>
    <string name="textPersonSurname">Фамилия…</string>
    <string name="textPersonPhone">Моб.телефон…</string>
    <string name="textPersonDocMail">Эл.почта врача…</string>
    <string name="buttonSaveData">Сохранить данные</string>
    <string name="text_medication">Прием лекарств</string>
    <string name="radioButton_medication">Прием лекарств</string>
    <string name="radioButton_doctors_appointment">Поход к врачу</string>
    <string name="radioButton_state_tracker">Оценка самочувствия</string>
    <string name="radioButton_other">Другое</string>
    <string name="menu_home">Главная</string>
    <string name="menu_test">Тесты</string>
    <string name="menu_notifications">Оповещения</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_support">Поддержка</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_introduction">Описание теста</string>
    <string name="text_test_draw_figure">Обведите фигуру</string>
    <string name="text_test_burst_ball">Лопните воздушный шар</string>
    <string name="text_test_printing">Перепечатайте текст</string>
    <string name="text_test_reading">Прочитайте текст</string>
    <string name="text_test_mole">Игра в крота</string>
    <string name="text_test_target">Тест на постукивание</string>
    <string name="text_test_stars">Соедините звёзды в созвездие</string>
    <string name="text_test_emotional">Опишите самочувствие</string>
    <string name="tutorial_title_welcome">Добро пожаловать в \n State Of Health Tracker!</string>
    <string name="tutorial_title_home">Ведите дневник!</string>
    <string name="tutorial_title_test">Тесты!</string>
    <string name="tutorial_title_profile">Заполните профиль!</string>
    <string name="tutorial_title_notification">Всё успеть!</string>
    <string name="tutorial_description_welcome">Трекер, который помогает отслеживать самочувствие и вовремя реагировать на изменения</string>
    <string name="tutorial_description_test">Играйте,чтобы увеличить точность получаемых данных</string>
    <string name="tutorial_description_profile">Информация является конфиденциальной</string>
    <string name="tutorial_description_notification">Заполните график один раз и больше не беспокойтесь</string>
    <string name="tutorial_description_home">Оцените самочувствие в удобное для вас время, не записывая ни единого слова</string>
    <string name="profile_text_hint_name">ИМЯ</string>
    <string name="profile_text_name">Иван</string>
    <string name="profile_text_hint_surname">ФАМИЛИЯ</string>
    <string name="profile_text_surname">Иванов</string>
    <string name="profile_text_hint_birthday">ДАТА РОЖДЕНИЯ</string>
    <string name="profile_text_birthday">11.11.2017</string>
    <string name="profile_text_hint_phone">МОБ.ТЕЛЕФОН</string>
    <string name="profile_text_phone">+79992345678</string>
    <string name="text_save">Сохранить</string>
    <string name="text_reminder">Категория…</string>
    <string name="text_day">Каждый день</string>
    <string name="text_time">13:30</string>
    <string name="text_repeat">Повтор</string>
    <string name="profile_text_confidential_contact_data">Ваши контактные данные являются конфиденциальной информацией и доступны для просмотра только вашему лечащему врачу.</string>
    <string name="text_test_print">Белеет парус одинокий \nВ тумане моря голубом!.. \nЧто ищет он в стране далекой? \nЧто кинул он в краю родном?.. \n\nИграют волны — ветер свищет, \nИ мачта гнется и скрыпит… \nУвы! он счастия не ищет \nИ не от счастия бежит!</string>
    <string-array name="poems">
        <item>От торопливости нет спасу,\nПожалуй, в рамках всей страны:\nКак много тех, кто хочет сразу\nНадеть рубашку и штаны!</item>
        <item>Признаюсь честно, глазом не моргнув,\nЧто попадаю иногда впросак:\nПонять идеи Бога я ещё могу,\nА вот запросы женщины - никак!</item>
        <item>Любит зебра по лужайке\nВ полосатой бегать майке.\nЗебра даже за конфетку\nНе наденет майку в клетку.</item>
        <item>Бывает даже в глупости резон,\nА мудрость ошибается в итоге,\nИ тот, кто видит даль сквозь горизонт,\nНе может посмотреть себе под ноги!</item>
        <item>В те дни, когда уж нет надежд,\nА есть одно воспоминанье,\nВеселье чуждо наших вежд,\nИ легче на груди страданье.</item>
        <item>Не стоит себя мыслями грузить,\nВо всем до понимания доходить,\nУменье жизнью насладиться\nВсегда любому пригодится.</item>
    </string-array>
    <string-array name="texts">
        <item>Жила на земле бедная женщина.\nБыло у неё четверо детей.\nНе слушались дети матери.\nБегали, играли на снегу с утра до вечера.</item>
        <item>Был тёплый весенний вечер.\nБабушка вышла из дома и уселась на крылечко.\nЭтого только и ждали ребята.</item>
        <item>Собак приучают спасать детей во время пожара.\nОдна собака спасла двенадцать детей.\nЕё звали Боб.</item>
        <item>На лугу летали бабочки.\nДети ловили бабочек.\nВове подарили кубики.\nБоре подарили тетради.</item>
        <item>Рыбаки ловили рыбу.\nОни сидели на берегу.\nЛида кормила кроликов.\nОна дала им траву.</item>
        <item>Мама купила малину.\nМалину дали детям.\nКниги лежали на парте.\nУченики читали.</item>
        <item>Девочка пасла корову.\nКорова щипала траву.\nНаступило жаркое лето.\nДети много купаются.</item>
        <item>Наташа купила арбуз.\nОна любит арбузы.\nДети жили в лагере.\nТам было весело.</item>
        <item>Туристы сидели у костра.\nОни пели песни.\nНаташа пила молоко.\nМама пила чай.</item>
        <item>Мама много работает.\n Галя помогает маме.\n Петя принёс газету.\n Папа читает газету.</item>
        <item>На огороде поспели овощи.\n Овощи пора убирать.\n Тамара собирала репу.\n Маша собирала бобы.</item>
        <item>Мама варила бобы.\n Дети ели.\n Пастух пригнал стадо.\n Пришла наша Буренка.</item>
        <item>Бабушка доила корову.\n Буренка дала много молока.\n Девочки посадили цветы.\n Маша поливала цветы.</item>
        <item>Было много цветов.\n Девочки плели венки.\n Маша любит ромашки.\n Сима любит розы.</item>
        <item>На столе стоят цветы.\n Мама любит эти цветы.\n Птицам зимой голодно.\n Дети повесили кормушки.</item>
        <item>Медведь спит всю зиму.\n Голодный волк ходит по лесу.\n Зимой солнце светит мало.\n Дни короткие.\n Шура любит лето.\n Дима любит зиму.</item>
    </string-array>
    <string name="data_mining_activated">Сбор данных активирован</string>
    <string name="text_voice_text_header">Прочитайте текст!</string>
    <string name="text_voice_text_description">Прочитайте текст с экрана.\n Постарайтесь говорить громко и внятно!</string>
    <string name="start_test">Начать тест</string>
    <string name="app_name_text1">StateOf</string>
    <string name="app_name_text2">Health</string>
    <string name="app_name_text3">Tracker</string>
    <string name="dialog_text_policy_title_1">Политика конфиденциальности</string>
    <string name="dialog_text_policy_1">Политика конфиденциальности персональной информации (далее - Политика) действует в отношении всей информации, которую приложение StateOfHealthTracker
    может получить о Пользователе либо устройстве Пользователя во время установки или использования.
    Установка \"Мобильного приложения StateOfHealthTracker\" означает безоговорочное согласие Пользователя с настоящей Политикой
    и указанными в ней условиями обработки его персональной информации; в случае несогласия с этими условиями Пользователь должен воздержаться
    от установки и использования приложения.</string>
    <string name="dialog_text_policy_title_2">Персональная информация Пользователей</string>
    <string name="dialog_text_policy_2">В отношении персональной информации
    Пользователя сохраняется ее конфиденциальность, кроме случаев добровольного предоставления Пользователем информации о себе для общего доступа неограниченному кругу лиц.\n
    При использовании Приложения Пользователь соглашается с тем, что определённая часть его персональной информации, указанная им,
        в том числе при регистрации, становится общедоступной и отображается в системе лечащего врача.\n
        Приложение StateOfHealthTracker хранит только ту персональную информацию, которая необходима для работы мобильного приложения
        или которую Пользователь самостоятельно предоставляет при регистрации в Приложении и его использовании, за
        исключением тех случаев, когда законодательством предусмотрено обязательное хранение персональной информации в течение
        определенного законом срока.
    </string>
    <string name="dialog_text_policy_title_3">Меры, применяемые для защиты персональной информации Пользователя</string>
    <string name="dialog_text_policy_3">Приложение StateOfHealthTracker принимает необходимые и достаточные организационные и технический
    меры для защиты персональной информации Пользователя от неправомерного или случайного доступа, уничтожения, изменения,
    блокирования, копирования, распространения, а также от иных неправомерных действий с ней третьих лиц.</string>
    <string name="dialog_text_policy_title_4">Изменение Политики конфиденциальности</string>
    <string name="dialog_text_policy_4">Приложение StateOfHealthTracker имеет право вносить изменения в настоящую Политику конфиденциальности.
    При внесении изменений в актуальной редакции указывается дата последнего обновления. Новая редакция Политики вступает в силу с момента
    ее размещения, если иное не предусмотрено новой редакцией Политики.</string>
</resources>