<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="300dp">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/iv_check_circle"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/dialog_conf_margin_24"
                        android:src="@drawable/ic_policy" />

                <TextView
                        android:textSize="16sp"
                        style="@style/TextViewPolicyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_text_policy_title_1"
                        android:textStyle="bold" />

                <TextView
                        style="@style/TextViewPolicyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_text_policy_1" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        style="@style/TextViewPolicyStyle"
                        android:textStyle="bold"
                        android:text="@string/dialog_text_policy_title_2"/>
                <TextView
                        style="@style/TextViewPolicyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_text_policy_2" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        style="@style/TextViewPolicyStyle"
                        android:textStyle="bold"
                        android:text="@string/dialog_text_policy_title_3"/>
                <TextView
                        style="@style/TextViewPolicyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_text_policy_3" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        style="@style/TextViewPolicyStyle"
                        android:textStyle="bold"
                        android:text="@string/dialog_text_policy_title_4"/>
                <TextView
                        style="@style/TextViewPolicyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_text_policy_4" />


            </LinearLayout>


        </ScrollView>

    </RelativeLayout>
</layout>