<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".home.StatesFragment">

    <data>

        <variable
                name="statesViewModel"
                type="stanevich.elizaveta.stateofhealthtracker.home.StatesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statesConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">


        <TextView
                android:id="@+id/textView_howDoYouFeel"
                style="@style/MyTextViewStyle"
                android:contentDescription="@string/text_how_do_you_feel"
                android:text="@string/text_how_do_you_feel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
                android:id="@+id/imageButton_excellent"
                style="@style/MyImageButtonStyle"
                android:contentDescription="@string/imageButton_excellent"
                android:onClick="@{() -> statesViewModel.onStartTrackingMood(`+`)}"
                android:src="@drawable/image_button_excellent"
                app:layout_constraintBottom_toTopOf="@+id/imageButton_satisfactorily"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_howDoYouFeel" />

        <ImageButton
                android:id="@+id/imageButton_satisfactorily"
                style="@style/MyImageButtonStyle"
                android:contentDescription="@string/imageButton_satisfactorily"
                android:onClick="@{() ->  statesViewModel.onStartTrackingMood(`~`)}"
                android:src="@drawable/image_button_satisfactorily"
                app:layout_constraintBottom_toTopOf="@+id/imageButton_bad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton_excellent" />


        <ImageButton
                android:id="@+id/imageButton_bad"
                style="@style/MyImageButtonStyle"
                android:contentDescription="@string/imageButton_bad"
                android:onClick="@{() ->  statesViewModel.onStartTrackingMood(`-`)}"
                android:src="@drawable/image_button_bad"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton_satisfactorily" />


        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageButton_bad">

            <Button
                    android:id="@+id/button_dyskinesia"
                    style="@style/MyButtonStyle"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/btn_dyskinesia"
                    android:onClick="@{() ->  statesViewModel.onStartTrackingDiskinezia(`D`)}"
                    android:text="@string/btn_dyskinesia"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_medication"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <Button
                    android:id="@+id/button_medication"
                    style="@style/MyButtonStyle"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/btn_medication"
                    android:onClick="@{() -> statesViewModel.onStartTrackingPill(`X`)}"
                    android:text="@string/btn_medication"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button_dyskinesia"
                    app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>