<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

        <ImageView
                android:id="@+id/tutorial_anim_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/test_tutorial_voice_emotion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

        <TextView
                android:id="@+id/tutorial_title_profile"
                style="@style/ProfileTitleTextView"
                android:text="@string/text_voice_text_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tutorial_anim_profile" />

        <TextView
                android:id="@+id/tutorial_description_profile"
                style="@style/ProfileDescriptionTextView"
                android:text="@string/text_voice_text_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tutorial_title_profile" />

        <Button
                android:id="@+id/btn_start"
                style="@style/MyButtonStyle"
                android:layout_width="@dimen/btn_save_layout_width"
                android:text="@string/start_test"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>