<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RadioGroup
                android:id="@+id/radioCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                android:overScrollMode="never">

            <RadioButton
                    android:id="@+id/rbDoctor"
                    style="@style/MyRadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:checked="true"
                    android:layoutDirection="rtl"
                    android:overScrollMode="never"
                    android:text="@string/radioButton_doctors_appointment"
                    android:textSize="18sp" />

            <RadioButton
                    android:id="@+id/rbMedication"
                    style="@style/MyRadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/margin_material_8"
                    android:background="@android:color/transparent"
                    android:layoutDirection="rtl"
                    android:overScrollMode="never"
                    android:text="@string/radioButton_medication"
                    android:textSize="18sp" />

            <RadioButton
                    android:id="@+id/rbAppointment"
                    style="@style/MyRadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/margin_material_8"
                    android:background="@android:color/transparent"
                    android:layoutDirection="rtl"
                    android:overScrollMode="never"
                    android:text="@string/radioButton_state_tracker"
                    android:textSize="18sp" />

        </RadioGroup>

    </LinearLayout>
</layout>