<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/splash"
                android:layout_width="@dimen/splash_icon_size"
                android:layout_height="@dimen/splash_icon_size"
                android:src="@drawable/splash_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/splash">

            <TextView
                    android:id="@+id/text1"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_text1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            <TextView
                    android:id="@+id/text2"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_text2"
                    android:textColor="@color/colorRed"
                    android:textSize="24sp" />

            <TextView
                    android:id="@+id/text3"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_text3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>