<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="stanevich.elizaveta.stateofhealthtracker.screens.settings.SettingsFragment">


    <!--    <data>-->
    <!--        <variable-->
    <!--                name="settingsViewModel"-->
    <!--                type="stanevich.elizaveta.stateofhealthtracker" />-->
    <!--    </data>-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/button_personal_date"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"

                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:text="@string/button_personal_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
        </Button>

        <Button
                android:id="@+id/button_notifications"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:text="@string/button_notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_personal_date">
        </Button>

        <Button
                android:id="@+id/button_send_data"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"

                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:text="@string/button_send_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_notifications">
        </Button>



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>