<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_save_layout_height"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/btn_save_marginEnd"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:padding="5dp"
                android:text="@string/text_save"
                android:textColor="@color/colorTextButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tv_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_reminder"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save" />

        <View
                android:id="@+id/line1"
                style="@style/LineStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_reminder" />

        <ImageView
                android:id="@+id/img_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
                android:id="@+id/text_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/text_day"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/img_time"
                app:layout_constraintStart_toEndOf="@id/img_time"
                app:layout_constraintTop_toTopOf="@id/img_time" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>